fix overlay by putting it on top with non-100% opacity

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Remarkable Canvas Experiment</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-type" />
-    <canvas width="702" height="936" id="canvas-overlay" style="border: 1px solid #aaa; position: absolute; left: 10; right; 10"></canvas>
-    <canvas width="702" height="936" id="canvas" style="border: 1px solid #aaa; position: absolute; left: 10; right; 10 "></canvas>
+    <canvas width="702" height="936" id="canvas" style="border: 1px solid #aaa; position: absolute; left: 10; right: 10 "></canvas>
+    <canvas width="702" height="936" id="canvas-overlay" style="border: 1px solid #aaa; position: absolute; left: 10; right: 10; opacity: 0.7"></canvas>
 </head>
 <body>
 <script>
